# rms-cloud-tasks

./: .coveragerc  .flake8  README.md  pyproject.toml  pytest.ini  requirements.txt  setup.cfg  setup.py  test_gcp.py  test_ubuntu_image.py  x.yaml
.cursor/rules/: bug_report.mdc  documentation.mdc  environment_best_practices.mdc  how_to.mdc  javascript_typescript_best_practices.mdc  pull_request.mdc  python-rules.mdc  python_best_practices.mdc  python_fast_api.mdc
.cursor/skills/critique-test-suite/: SKILL.md
.cursor/skills/run-all-checks/: SKILL.md
.github/workflows/: run-tests.yml
docs/: cli.rst  conf.py  config.rst  example_parallel_addition.rst  examples.rst  index.rst  provider_aws.rst  provider_gcp.rst  quickstart.rst  success.rst  worker.rst  worker_api.rst
examples/: README.md  cloud_config.yaml  cloud_config_no_region.yaml  config.yaml  parallel_tasks.json  queue_reader_README.md  run_cli_config.yml  run_cli_image_tests.sh  run_cli_inst_type_tests.sh  run_cli_queue_tests.sh  run_cli_region_tests.sh  test_region_selection.py
examples/archive/: README.md  adapted_worker_config.json  addition_tasks.json  cloud_config.yaml  cloud_worker_config.json  config.yaml  config_demo.py  parallel_worker_config.json  queue_reader.py  requirements.txt  startup_script.sh  tasks.json  worker.py  worker_adder.py
examples/archive/tests-old/instance_orchestrator/: test_aws_spot.py
examples/archive/tests-old/worker/: test_worker.py
examples/parallel_addition/: .config.yml.kate-swp  addition_tasks.json  config.yml  config_with_secrets.yml  generate_addition_tasks.py  parallel_tasks.json  worker_addition.py  worker_addition_exceptions.py
examples/parallel_addition/results/: addition-task-000001.txt  addition-task-000002.txt  addition-task-000003.txt  addition-task-000004.txt  addition-task-000005.txt  addition-task-000006.txt  addition-task-000007.txt  addition-task-000008.txt  addition-task-000009.txt  addition-task-000010.txt  addition-task-000011.txt  addition-task-000012.txt  addition-task-000013.txt  addition-task-000014.txt  addition-task-000015.txt  addition-task-000016.txt  addition-task-000017.txt  addition-task-000018.txt  addition-task-000019.txt  addition-task-000020.txt  addition-task-000021.txt  addition-task-000022.txt  addition-task-000023.txt  addition-task-000024.txt  addition-task-000025.txt  addition-task-000026.txt  addition-task-000027.txt  addition-task-000028.txt  addition-task-000029.txt  addition-task-000030.txt  addition-task-000031.txt  addition-task-000032.txt  addition-task-000033.txt  addition-task-000034.txt  addition-task-000035.txt  addition-task-000036.txt  addition-task-000037.txt  addition-task-000038.txt  addition-task-000039.txt  addition-task-000040.txt  (+193 more)
examples/worker_repo/: README.md  requirements.txt  worker.py  worker_adapted.py  worker_adder.py  worker_cloud.py
scripts/: run-all-checks.sh
src/cloud_tasks/: cli.py
src/cloud_tasks/common/: base.py  config.py  logging_config.py  task_db.py  time_utils.py
src/cloud_tasks/instance_manager/: __init__.py  aws.py  azure.py  gcp.py  instance_manager.py  orchestrator.py
src/cloud_tasks/instance_orchestrator/: __init__.py  aws.py  azure.py  gcp.py  orchestrator.py
src/cloud_tasks/queue_manager/: __init__.py  aws.py  azure.py  gcp.py  queue_manager.py  taskqueue.py
src/cloud_tasks/worker/: __init__.py  cloud_adapter.py  worker.py
tests/: conftest.py  test_logging.py  test_queue.py
tests/cloud_tasks/: test_cli.py
tests/cloud_tasks/cli/: __init__.py  test_event_monitor.py  test_run_argv.py  test_yield_tasks.py
tests/cloud_tasks/common/: test_base.py  test_config.py  test_logging_config.py  test_task_db.py  test_time_utils.py
tests/cloud_tasks/instance_manager/: test_gcp.py  test_init.py  test_instance_manager.py  test_orchestrator.py
tests/cloud_tasks/instance_manager/gcp/: conftest.py  test_gcp_boot_disk_info.py  test_gcp_images.py  test_gcp_instance_ops.py  test_gcp_instance_types.py  test_gcp_optimal.py  test_gcp_pricing.py  test_gcp_pricing_cache.py  test_gcp_region_zone.py
tests/cloud_tasks/queue_manager/: test_aws.py  test_gcp.py  test_init.py
tests/cloud_tasks/worker/: conftest.py  test_worker.py  test_worker_event_logging.py  test_worker_init.py  test_worker_queue.py  test_worker_renewal.py  test_worker_runtime.py
tests/common/: test_config.py  test_logging_config.py
tests/instance_orchestrator/: test_aws_spot.py  test_orchestrator.py
tests/manual/: run_cli_image_tests.sh  run_cli_queue_tests.sh
tests/queue_manager/: conftest.py  test_aws.py  test_azure.py  test_gcp.py  test_gcp_queue.py  test_integration.py
tests/worker/: test_cloud_adapter.py  test_worker.py
