[build-system]
requires = ["setuptools>=61.0", "setuptools_scm[toml]", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rms-cloud-tasks"
dynamic = ["version"]
description = "A scalable, multi-cloud task processing system"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "aiohttp",
  "asyncio",
  "click",
  "json-stream",
  "numpy",
  "prettytable",
  "pydantic",
  "pyyaml",
  "rms-filecache",
  "shortuuid",
  "tqdm",
  "boto3",
  "google-cloud-billing",
  "google-cloud-compute",
  "google-cloud-monitoring",
  "google-cloud-pubsub",
  "google-cloud-storage"
]
license = {text = "Apache-2.0"}
maintainers = [
  {name = "Robert S. French", email = "rfrench@seti.org"}
]
keywords = ["AWS", "GCP", "Azure"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Natural Language :: English",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Utilities",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Operating System :: MacOS :: MacOS X",
  "Operating System :: POSIX :: Linux",
  "Operating System :: Microsoft :: Windows"
]

[project.urls]
Homepage = "https://github.com/SETI/rms-cloud-tasks"
Repository = "https://github.com/SETI/rms-cloud-tasks"
Source = "https://github.com/SETI/rms-cloud-tasks"
Issues = "https://github.com/SETI/rms-cloud-tasks/issues"

[project.scripts]
cloud_tasks = "cloud_tasks.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

#[tool.setuptools.package-data]
#"rms-cloud-tasks" = ["py.typed"]

[tool.setuptools_scm]
local_scheme = "no-local-version"
write_to = "src/_version.py"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
python_classes = "Test*"

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests", "examples"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]  # Line length enforced by ruff format

[tool.mypy]
plugins = "pydantic.mypy"
follow_imports = "silent"

[[tool.mypy.overrides]]
module = [
    "json_stream.*",
    "google.cloud.pubsub_v1.*",
    "google.cloud",
    "botocore.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.*"
disable_error_code = ["method-assign", "attr-defined"]
ignore_missing_imports = true
